[package]
name = "ao3_downloader"
version = "0.1.0"
edition = "2021"
description = "A tool to download EPUB files of specific AO3 fanfiction stories"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [ "cookies", "gzip", "rustls-tls-webpki-roots" ] }
scraper = "0.16.0"
thiserror = "1.0.48"

[dev-dependencies]
tokio = { version = "1.28.2", features = [ "macros", "test-util" ] }
