[package]
name = "ao3_downloader"
version = "0.1.0"
edition = "2021"
description = "A tool to download EPUB files of specific AO3 fanfiction stories"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [ "cookies", "gzip", "rustls-tls-webpki-roots" ] }
scraper = "0.18.1"
thiserror = "1.0.57"

[dev-dependencies]
tokio = { version = "1.29.1", features = [ "macros", "test-util" ] }
